# ibkr_micro_hft

./: .gitignore  README.md  main.py  pyproject.toml
configs/: default.toml
deploy/: ibkr-micro-alpha.service  install_systemd.sh
docs/: IBKR_US_Equities_Comprehensive_Strategy.md  IBKR_US_Equities_Micro_Alpha_Scalp_Design.md
src/ibkr_micro_alpha/: __init__.py  cli.py  config.py  engine.py  event_bus.py  execution.py  logging_utils.py  reporting.py  risk.py  session.py  signals.py  state.py  storage.py  strategy.py  types.py
src/ibkr_micro_alpha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ibkr_micro_alpha/adapter/: base.py  ibkr.py
tests/: test_config.py  test_execution.py  test_risk.py  test_signals.py  test_strategy.py
